<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="swdev.wifi.at.myapplication.MainActivity">
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stat"
        android:orderInCategory="100"
        android:title="@string/grafik"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/einstellungen"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:title="@string/info"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>