<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExportActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ET_ExportStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/von_tt_mm_yyyy"
                android:inputType="date" />

            <EditText
                android:id="@+id/ET_ExportEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/ET_ExportStartDate"
                android:layout_alignStart="@+id/ET_ExportStartDate"
                android:layout_below="@+id/ET_ExportStartDate"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/bis_tt_mm_yyyy"
                android:inputType="date" />


            <EditText
                android:id="@+id/ET_ExportEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/ET_ExportStartDate"
                android:layout_alignStart="@+id/ET_ExportStartDate"
                android:layout_below="@+id/ET_ExportEndDate"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/BT_ExportStart"
                android:layout_width="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/SP_ExportSpin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@color/colorAccent"
                android:textColor="#ffffff"
                android:text="@string/daten_exportieren" />

            <Spinner
                android:id="@+id/SP_ExportSpin"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_alignEnd="@+id/ET_ExportStartDate"
                android:layout_alignStart="@+id/ET_ExportStartDate"
                android:layout_below="@+id/ET_ExportEmail"
                android:entries="@array/categories_array"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>