<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".EditOpenLogActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_OpenInfo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abfahrt"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:background="@color/colorLightGrey"
                />
            <TextView
                android:id="@+id/TV_OpenInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="5dp"
                android:layout_alignEnd="@+id/TV_OpenInfo1"
                android:layout_alignStart="@+id/TV_OpenInfo1"
                android:layout_below="@+id/TV_OpenInfo1"
                android:textSize="12sp"
                android:background="@color/colorLightGrey"
                />
            <TextView
                android:id="@+id/TV_OpenInfo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text=""
                android:layout_alignEnd="@+id/TV_OpenInfo1"
                android:layout_alignStart="@+id/TV_OpenInfo1"
                android:layout_below="@+id/TV_OpenInfo2"
                android:textSize="12sp"
                android:background="@color/colorLightGrey"
                />
            <TextView
                android:id="@+id/TV_OpenInfo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:text=""
                android:layout_alignEnd="@+id/TV_OpenInfo1"
                android:layout_alignStart="@+id/TV_OpenInfo1"
                android:layout_below="@+id/TV_OpenInfo3"
                android:textSize="12sp"
                android:background="@color/colorLightGrey"
                />

            <TextView
                android:id="@+id/TV_OpenInfo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ankunft2"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_below="@+id/TV_OpenInfo4"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:background="@color/colorLightGrey"
                />
            <TextView
                android:id="@+id/TV_OpenInfo6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="5dp"
                android:layout_alignEnd="@+id/TV_OpenInfo1"
                android:layout_alignStart="@+id/TV_OpenInfo1"
                android:layout_below="@+id/TV_OpenInfo5"
                android:textSize="12sp"
                android:background="@color/colorLightGrey"
                />
            <TextView
                android:id="@+id/TV_OpenInfo7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text=""
                android:layout_alignEnd="@+id/TV_OpenInfo1"
                android:layout_alignStart="@+id/TV_OpenInfo1"
                android:layout_below="@+id/TV_OpenInfo6"
                android:textSize="12sp"
                android:background="@color/colorLightGrey"
                />
            <TextView
                android:id="@+id/TV_OpenInfo8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:text=""
                android:layout_alignEnd="@+id/TV_OpenInfo1"
                android:layout_alignStart="@+id/TV_OpenInfo1"
                android:layout_below="@+id/TV_OpenInfo7"
                android:textSize="12sp"
                android:background="@color/colorLightGrey"
                />

            <TextView
                android:id="@+id/TV_EndOpen"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/fahrtinfo"
                android:layout_alignEnd="@+id/TV_OpenInfo1"
                android:layout_alignStart="@+id/TV_OpenInfo1"
                android:layout_below="@+id/TV_OpenInfo8"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:textAlignment="center"
                />

            <AutoCompleteTextView
                android:id="@+id/ACTV_EndOpenNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/TV_OpenInfo1"
                android:layout_alignStart="@id/TV_OpenInfo1"
                android:layout_below="@id/TV_EndOpen"
                android:inputType="textNoSuggestions"
                android:hint="@string/zweck"/>

            <Switch
                android:id="@+id/SW_EndOpenCategory"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ACTV_EndOpenNote"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:ems="10"
                android:text="@string/beruflich"
                android:textSize="18sp" />

            <Button
                android:id="@+id/BT_EndOpenTrip"
                android:layout_width="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/SW_EndOpenCategory"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@color/colorAccent"
                android:textColor="#ffffff"
                android:text="@string/fahrt_speichern" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>